--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link href="css/scrolling-nav.css" rel="stylesheet">
     <title>Gustavo Rubo</title>
 
-    <!-- Bootstrap -->
+	<!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="estilo.css" rel="stylesheet">
-
+	<link href="css/estilo.css" rel="stylesheet">
+	
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -25,6 +25,12 @@
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+	function vai2()
+	{ $("html, body").animate({ scrollTop: $('#menu2').offset().top }, 800); }
+	function vai3()
+	{ $("html, body").animate({ scrollTop: $('#menu3').offset().top }, 800); }
+	function vai4()
+	{ $("html, body").animate({ scrollTop: $('#menu4').offset().top }, 800); }
 </script>
   </head>
   <body data-spy="scroll" data-target=".navbar">
@@ -33,9 +39,9 @@
 	</div>
 	<nav class="navbar navbar-inverse " id="links">
 		<ul class="nav navbar-nav navbar-center">
-			<li><a href="#menu2" ><div id="botao">Sobre</div></a></li>
-			<li><a href="#menu3" ><div id="botao">Trabalhos</div></a></li>
-			<li><a href="#menu4" ><div id="botao">Contato</div></a></li>
+			<li><a href="#" onclick="vai2()"><div id="botao">Sobre</div></a></li>
+			<li><a href="#" onclick="vai3()"><div id="botao">Trabalhos</div></a></li>
+			<li><a href="#" onclick="vai4()"><div id="botao">Contato</div></a></li>
 		</ul>
 	</nav>
 	
@@ -129,13 +135,12 @@
 	</div>
 	<div id="rodape">
 	</div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	<script src="processing.min.js" type="text/javascript"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrolling-nav.js"></script>
+	<script src="js/processing.min.js" type="text/javascript"></script>
   </body>
 </html>
+
 
 
 <script type="text/processing" data-processing-target="pjs">
