--- a/index.html
+++ b/index.html
@@ -60,6 +60,57 @@
 	</section>
 	
 	<section id="menu3">
+	
+	<div id="conteudo" style="height: 378px;">
+	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+	    <ol class="carousel-indicators">
+		  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+		<div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="img/home_bebidas.png" alt="First slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="img/cadastro_bebidas.png" alt="Second slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="img/pesquisar_bebidas.png" alt="Third slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="fourth-slide" src="img/produto_bebidas.png" alt="Fourth slide">
+          <div class="container">
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+	  </div>
+	  <div id="texto-cppaint">
+        <h2>Jandainha bebidas</h2>
+	    <p>Um website desenvolvido em grupo para as disciplinas de PHP, SQL
+		e aplicativos.</p>
+	    <p>O site simula um comécio on-line, e possui funcionalidades como
+		cadastros de clientes e usuários, consultas e pesquisas para bebidas e
+		nível administrador.</p>
+  	    <p>A base de dados utilizada foi postgres.</p>
+      </div>
+	</div>
+	
 	<div id="conteudo">
 	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    <ol class="carousel-indicators">
