--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<-- !DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -320,4 +320,4 @@ class Valume extends Objeto
   }
 }
 
-</script>
+</script -->
