--- a/index.html
+++ b/index.html
@@ -1,323 +1,26 @@
-<-- !DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="css/scrolling-nav.css" rel="stylesheet">
-    <title>Gustavo Rubo</title>
+<html>
+<head>
+<meta charset="utf-8">
+</head>
 
-	<!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/estilo.css" rel="stylesheet">
-	
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	<!-- Hotjar Tracking Code for http://gustavo-rubo.github.io -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:227076,hjsv:5};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-	function vai2()
-	{ $("html, body").animate({ scrollTop: $('#menu2').offset().top }, 800); }
-	function vai3()
-	{ $("html, body").animate({ scrollTop: $('#menu3').offset().top }, 800); }
-	function vai4()
-	{ $("html, body").animate({ scrollTop: $('#menu4').offset().top }, 800); }
-</script>
-  </head>
-  <body data-spy="scroll" data-target=".navbar">
-	<div id="cabecalho">
-      <canvas id="pjs"></canvas>
-	</div>
-	<nav class="navbar navbar-inverse " id="links">
-		<ul class="nav navbar-nav navbar-center">
-			<li><a href="#" onclick="vai2()"><div id="botao">Sobre</div></a></li>
-			<li><a href="#" onclick="vai3()"><div id="botao">Trabalhos</div></a></li>
-			<li><a href="#" onclick="vai4()"><div id="botao">Contato</div></a></li>
-		</ul>
-	</nav>
-	
-	<section id="menu2">
-	<div id="conteudo">
-	  <div id="texto1">
-	    <h2>Quem sou eu</h2>
-		<p>Aluno do terceiro ano de informática do Colégio Técnico Industrial
-			de Bauru, gosto muito do meu curso e busco sempre novas formas
-			de utilizar a informática para fazer coisas idiotas.</p>
-		<p>Gosto também de música (toco piano e violão), origami, robótica
-			e de frequentar o meu grupo escoteiro.</p>
-	  </div>
-	  <img id="eu" src="img/eu.png"></img>
-	</div>
-	</section>
-	
-	<section id="menu3">
-	
-	<div id="conteudo" style="height: 378px;">
-	  <div id="myCarousel1" class="carousel slide" data-ride="carousel">
-	    <ol class="carousel-indicators">
-		  <li data-target="#myCarousel1" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel1" data-slide-to="1"></li>
-          <li data-target="#myCarousel1" data-slide-to="2"></li>
-          <li data-target="#myCarousel1" data-slide-to="3"></li>
-        </ol>
-		<div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="img/home_bebidas.png" alt="First slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="img/cadastro_bebidas.png" alt="Second slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="img/pesquisar_bebidas.png" alt="Third slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="fourth-slide" src="img/produto_bebidas.png" alt="Fourth slide">
-          <div class="container">
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel1" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel1" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-	  </div>
-	  <div id="texto-cppaint">
-        <h2>Jandainha bebidas</h2>
-	    <p>Um website desenvolvido em grupo para as disciplinas de PHP, SQL
-		e aplicativos.</p>
-	    <p>O site simula um comécio on-line, e possui funcionalidades como
-		cadastros de clientes e usuários, consultas e pesquisas para bebidas e
-		nível administrador.</p>
-  	    <p>A base de dados utilizada foi postgres.</p>
-      </div>
-	</div>
-	
-	<div id="conteudo">
-	  <div id="myCarousel2" class="carousel slide" data-ride="carousel">
-	    <ol class="carousel-indicators">
-		  <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel2" data-slide-to="1"></li>
-          <li data-target="#myCarousel2" data-slide-to="2"></li>
-          <li data-target="#myCarousel2" data-slide-to="3"></li>
-        </ol>
-		<div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="img/tela1-cppaint.png" alt="First slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="img/tela2-cppaint.png" alt="Second slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="img/codigo-cppaint.png" alt="Third slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="fourth-slide" src="img/exemplo-cppaint.png" alt="Fourth slide">
-          <div class="container">
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel2" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel2" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-	  </div>
-	  <div id="texto-cppaint">
-        <h2>Cpp paint</h2>
-	    <p>UM PROGRAMA QUE FAZ PROGRAMAS!</p>
-	    <p>Fiz esse programa para me ajudar a construir programas em 
-		  C++ que tivessem "imagens", uma vez que escrever os sprites
-		  linha por linha levava muito tempo.</p>
-  	    <p>O programa tem uma interface para desenho, e produz um arquivo
-		  com o código correspondente para ser utilizado em outros projetos.</p>
-      </div>
-	</div>
-	</section>
-	
-	<section id="menu4">
-	<div id="conteudo">
-		<h2>Contato</h2>
-		<p>E-mail: gustavo.rubo@hotmail.com</p>
-		<p>Celular: (014) 99122 2713</p>
-	</div>
-	</section>
-	
-	<div id="tutubarao">
-	  <marquee id="tutubarao" direction="right">
-	    <pre>
-            .                
-            |\               
-.           | \              
-|\       _-´   ¨¨¨-.         
-\ `---¨¨¨        o  `>       
- `>,-----_         ´´    ><> 
- |/       ¨¨¨¨|/¨¨´´         
- ´            ´              
-	    </pre>
-	  </marquee>
-	</div>
-	<div id="rodape">
-	</div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-	<script src="js/processing.min.js" type="text/javascript"></script>
-  </body>
+<table>
+	<tbody>
+		<tr style="height: 40px">
+			<td style="padding:0 8px 0 0;" valign="top">
+				<img src="https://img.newoldstamp.com/f/000/089/u598.png?5a172680af4c6" width="116" height="68">
+			</td>
+			<td style="font-size:80%;font-family:Arial;border-left:3px solid;border-color:#b4000f;padding:0 0 0 8px;" valign="top">
+				<div style="font-size:1.3em;font-weight:bold;">Gustavo Rubo</div>
+				<span><span style="font-size:1.0em;font-weight:bold;">Diretor de Comunicação - </span></span>
+				<span style="font-size:1.0em;">Centro Acadêmico Mecânica e Mecatrônica - CAM</span></br>
+				<span style="font-size:1.0em;">Graduando em Engenharia Mecatrônica - Escola Politécnica da USP</span></br>
+				<div style="line-height:1em;font-size:1em;"></div>
+				<span style="font-size:0.9em;">(14) 99122-2713</span></span></div>
+				<div></div>
+				<div style="line-height:1em;font-size:1em;"></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
 </html>
-
-
-
-<script type="text/processing" data-processing-target="pjs">
-ArrayList<Valume> valumes;
-
-int tempo = 0;
-PFont f;
-PImage nome;
-
-void setup()
-{
-  valumes = new ArrayList<Valume>();
-  nome = loadImage("./img/nome.png");
-  size(800, 170);
-  for(int i = 0; i < 22; i ++)
-  {
-    Valume vl = new Valume((int)random(width), (int)random(height));
-    vl.nascimento = i * 3;
-    valumes.add(vl);
-  }
-  smooth();
-}
-
-void draw()
-{
-  tempo ++;
-  background(20);
-  for (Valume vl : valumes)
-  {
-    vl.atualiza();
-    if (vl.x < -20 || vl.x > width + 20
-      || vl.y < -20 || vl.y > height + 20)
-      vl.refaz();
-  }
-  
-  image(nome, 0, 0);
-}
-
-void mousePressed()
-{
-  Valume vl = new Valume(mouseX, mouseY);
-  valumes.add(vl);
-}
-
-abstract class Objeto
-{
-  double x, y;
-  
-  Objeto(double x, double y)
-  {
-    this.x = x;
-    this.y = y;
-  }
-  
-  abstract void desenha();
-  abstract void atualiza();
-}
-class Valume extends Objeto
-{
-  float velocidade, angulo, brilho;
-  int nascimento;
-  color centro, fora;
-  color amarelo1 = color(217, 232, 21);
-  color amarelo2 = color(217, 232, 21, 100);
-  color laranja1 = color(229, 97, 20);
-  color laranja2 = color(223, 97, 20, 100);
-
-  Valume(int x, int y)
-  {
-    super(x, y);
-    centro = amarelo1;
-    fora = amarelo2;
-    velocidade  = random(100) / 100;
-    angulo = random(TWO_PI);
-    brilho = 100;
-    nascimento = tempo;
-  }
-
-  void refaz()
-  {
-    x = (int)random(width);
-    y = (int)random(height);
-  }
-
-  double quad(float q) { 
-    return q*q;
-  }
-  double quad(double q) { 
-    return q*q;
-  }
-
-  boolean sobre()
-  {
-    if (quad(mouseX - x) + quad(mouseY - y) < quad(brilho/20)) return true;
-    else return false;
-  }
-
-  void desenha()
-  {
-    noStroke();
-    fill(fora);
-    ellipse((float)x, (float)y, brilho/10, brilho/10);
-    fill(centro);
-    ellipse((float)x, (float)y, 8, 8);
-  }
-
-  void atualiza()
-  {
-    angulo += sin(random(TWO_PI)) / 10;
-    velocidade += sin(random(TWO_PI)) / 10;
-    if (velocidade > 1)  velocidade = 1;
-    if (velocidade < -1) velocidade = -1;
-    x += velocidade * cos(angulo);
-    y += velocidade * sin(angulo);
-    brilho = 200 + 50 * sin((tempo - nascimento) / (PI * 10));
-    if (sobre())
-    {
-      centro = laranja1;
-      fora = laranja2;
-    } else
-    {
-      centro = amarelo1;
-      fora = amarelo2;
-    }
-    desenha();
-  }
-}
-
-</script -->
