--- a/index.html
+++ b/index.html
@@ -3,24 +3,6 @@
 <meta charset="utf-8">
 </head>
 
-<table>
-	<tbody>
-		<tr style="height: 40px">
-			<td style="padding:0 8px 0 0;" valign="top">
-				<img src="https://img.newoldstamp.com/f/000/089/u598.png?5a172680af4c6" width="116" height="68">
-			</td>
-			<td style="font-size:80%;font-family:Arial;border-left:3px solid;border-color:#b4000f;padding:0 0 0 8px;" valign="top">
-				<div style="font-size:1.5em;font-weight:bold;">Gustavo Rubo</div>
-				<span><span style="font-size:1.2em;font-weight:bold;">Diretor de Comunicação - </span></span>
-				<span style="font-size:1.2em;">Centro Acadêmico Mecânica e Mecatrônica - CAM</span></br>
-				<span style="font-size:1.2em;">Graduando em Engenharia Mecatrônica - Escola Politécnica da USP</span></br>
-				<div style="line-height:1em;font-size:1em;"></div>
-				<span style="font-size:1.1em;">(14) 99122-2713</span></span></div>
-				<div></div>
-				<div style="line-height:1em;font-size:1em;"></div>
-			</td>
-		</tr>
-	</tbody>
-</table>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pdH74bQMnsc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </html>
